Fixed misaligned portlet controls Fixed missing export/import portlet icon

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -945,6 +945,14 @@ Liferay fixes - Dockbar
  	color:#3D91FF;
  }
  
+ /* fix portlet controls*/ 
+ div.portlet-borderless-bar{
+ 	top:6px;
+ }
+ div.portlet-borderless-bar > span.portlet-title-default{
+ 	min-height:26px;
+ 	padding-top:2px;
+ }
 }
 
 /*=========================================================
